<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivCleverTapLogo"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/clevertaplogo" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivCleverTapLogo">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_name" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilIdentity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilName">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etIdentity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_identity" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilIdentity">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilEmail">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_mobile" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender_array"
                android:padding="5dp"
                android:spinnerMode="dropdown"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tilMobile" />

            <LinearLayout
                android:id="@+id/rlDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spnGender">

                <Button
                    android:id="@+id/btnDatePicker"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:text="@string/select_date" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSelectedDate"
                    style="@android:style/TextAppearance.Material.Title"
                    android:layout_width="@dimen/dimension_0_dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center" />


            </LinearLayout>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rlDate" />

            <Button
                android:id="@+id/btnPushProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnLogin" />

            <Button
                android:id="@+id/btnReset"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushProfile" />

            <Button
                android:id="@+id/btnScreenEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_screen_event"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnReset" />
            <Button
                android:id="@+id/btnPushEventNoProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_event_no_property"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnScreenEvent" />

            <Button
                android:id="@+id/btnPushEventStringProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_event_string"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushEventNoProperty" />

            <Button
                android:id="@+id/btnPushEventIntegerProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_event_integer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushEventStringProperty" />

            <Button
                android:id="@+id/btnPushEventFloatProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_event_float"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushEventIntegerProperty" />

            <Button
                android:id="@+id/btnPushEventBooleanProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_event_boolean"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushEventFloatProperty" />


            <Button
                android:id="@+id/btnPushEventDateProperty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_event_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushEventBooleanProperty" />

            <Button
                android:id="@+id/btnPushChargedEvent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/push_charged_event"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushEventDateProperty" />

            <Button
                android:id="@+id/btnAppInbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_inbox"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnPushChargedEvent" />

            <LinearLayout
                android:id="@+id/llBanner"
                android:layout_width="match_parent"
                android:orientation="vertical"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnAppInbox"
                android:visibility="gone"
                android:gravity="center"
                android:layout_height="wrap_content">

                <androidx.viewpager.widget.ViewPager
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:id="@+id/view_pager"/>
                
                <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/dot1"
                    android:layout_marginTop="10dp"
                    app:dotsColor="@android:color/holo_red_light"
                    app:selectedDotColor="@android:color/holo_red_dark"
                    app:dotsClickable="true"
                    app:dotsSize="15dp"
                    app:dotsSpacing="5dp"
                    app:progressMode="true"/>


            </LinearLayout>

            <Button
                android:id="@+id/btnNativeDisplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/raise_native_display_event"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llBanner" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>